:bug: fix image radius overflow

--- a/src/static/styles/components/shelf.css
+++ b/src/static/styles/components/shelf.css
@@ -61,6 +61,7 @@
   border-radius: 2px;
   display: flex;
   transition: all 160ms linear;
+  overflow: hidden;
 
   &:hover {
     background: white;
